[gd_scene load_steps=16 format=3 uid="uid://b3wlj7j8rkukt"]

[ext_resource type="Script" path="res://enemies/nolok/nolok.gd" id="1_orlmd"]
[ext_resource type="Texture2D" uid="uid://1j014jv4hhby" path="res://enemies/nolok/nolok.png" id="2_vja82"]
[ext_resource type="Texture2D" uid="uid://cc155bma50jty" path="res://enemies/nolok/nolok_jump.png" id="3_8l4gh"]
[ext_resource type="AudioStream" uid="uid://dgb20nn32s30q" path="res://enemies/nolok/jump.wav" id="4_axy6h"]
[ext_resource type="AudioStream" uid="uid://bba4sfi3eg7in" path="res://enemies/nolok/dead.wav" id="5_h3m2h"]

[sub_resource type="AtlasTexture" id="AtlasTexture_u1236"]
atlas = ExtResource("2_vja82")
region = Rect2(0, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbw7u"]
atlas = ExtResource("2_vja82")
region = Rect2(33, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2dhs"]
atlas = ExtResource("2_vja82")
region = Rect2(66, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmnw3"]
atlas = ExtResource("2_vja82")
region = Rect2(99, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgcs5"]
atlas = ExtResource("2_vja82")
region = Rect2(132, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wijek"]
atlas = ExtResource("2_vja82")
region = Rect2(165, 0, 33, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_tkk5f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1236")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbw7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2dhs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmnw3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgcs5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wijek")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_8l4gh")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kcnnw"]
radius = 9.5
height = 24.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_inkgs"]
radius = 4.0
height = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hvwqb"]
radius = 100.0

[node name="Nolok" type="CharacterBody2D"]
script = ExtResource("1_orlmd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_tkk5f")
autoplay = "default"

[node name="BodyShape" type="CollisionShape2D" parent="."]
position = Vector2(-1, 4)
shape = SubResource("CapsuleShape2D_kcnnw")

[node name="HeadShape" type="CollisionShape2D" parent="."]
position = Vector2(-8, -10)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_inkgs")

[node name="Vision" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
shape = SubResource("CircleShape2D_hvwqb")

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_axy6h")
volume_db = -3.0

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_h3m2h")

[connection signal="body_entered" from="Vision" to="." method="_on_vision_body_entered"]
[connection signal="body_exited" from="Vision" to="." method="_on_vision_body_exited"]
[connection signal="finished" from="Death" to="." method="_on_death_finished"]
